2006-07-24  Sven Herzberg  <herzi@gnome-de.org>

	* gnome-mouse-properties.c: use ngettext() correctly

2006-07-24  Sven Herzberg  <herzi@gnome-de.org>

	* gnome-mouse-properties.c: fix the non-xcursor case for solaris;
	closes: #319125 (based upon patch from Glynn Foster)

2006-07-23  Sebastien Bacher  <seb128@debian.org>

	* gnome-settings-mouse.desktop.in.in:
	don't list the Application category, list the HardwareSettings one,
	patch by Vincent Fretin <vincent.fretin@gmail.com> (Closes: #344321)

2006-06-11  Darren Kenny <darren.kenny@sun.com>

	Fixes #340003

	* gnome-mouse-properties.c (cursor_font_changed): if no cursor font
	set in GConf, just unselect and return.

2006-02-14  Anilkumar Bacheli <anilkumar.bacheli@wipro.com>

	Fixes #330588

	* gnome-mouse-properties.glade: Modified the Slider value label to
	"milliseconds" instead of "microseconds".

	* gnome-mouse-properties.c: Use ngettext() to get the correct plural
	form of the message. Also changed so that the slider label is in
	"milliseconds"

2006-01-28  Anilkumar Bacheli <anilkumar.bacheli@wipro.com>

	Fixes #154769

	* gnome-mouse-properties.glade: Modified the glade file so that
	context information for the slider is available to screen reader.
	Also, modified the Slider value label to "microseconds" instead of
	seconds.

	* gnome-mouse-properties.c: Changed the slider label to be in sync with
	speech.
	
2006-01-28  Scott Bronson <bronson@rinspin.com>

	Fixes #318056

	* gnome-mouse-properties.c (cursor_font_changed):
	* gnome-mouse-properties.glade: use "mouse pointer" instead of "cursor"
	in user-visible strings.

2006-01-06  Sebastien Bacher  <seb128@debian.org>

	* gnome-mouse-properties.glade: 
	make mouse click work with both left/right buttons,
	patch by akmal <cowdinosaur@gmail.com> (Fixes: #321225)

2005-11-14  Kjartan Maraas  <kmaraas@gnome.org>

	* gnome-mouse-properties.c: (setup_dialog): Mark some code static
	and remove some unused code.

2005-10-24  Jens Granseuer <jensgr@gmx.net>
