@@ -1,3 +1,8 @@
+2006-08-16  Sven Herzberg  <herzi@gnome-de.org>
+
+	* gnome-mouse-properties.c: also display the default theme (though
+	without a preview for technical reasons); fixes bug #322514
+
 2006-07-24  Sven Herzberg  <herzi@gnome-de.org>
 
 	* gnome-mouse-properties.c: use ngettext() correctly
